# ROS2-Webots

./: README.md
is_ws/: README.md  WorldMultipleCylinders.wbt  package.xml  setup.cfg  slaveMultiple.py  slavebackup.py
is_ws/install/: setup.ps1
is_ws/install/is_ws/lib/is_ws/: enable_robot  navigation_cells
is_ws/is_ws/: setup.py
is_ws/is_ws/is_ws/: masterMultiple.py  slave.py
is_ws/launch/: backupLaunch.py  navigation_cells_launch.py
is_ws/worlds/: lab3_task2.wbt
